--- a/src/main/resources/templates/Complementos/header.html
+++ b/src/main/resources/templates/Complementos/header.html
@@ -5,7 +5,7 @@
             <button id="abrir" class="abrir-menu"><i class="bi bi-list"></i></button>
             <nav class="nav" id="nav">
                 <button class="cerrar-menu" id="cerrar"><i class="bi bi-x"></i></button>
-                <ul class="nav__list">
+                <ul class="nav-list">
                     <li class="nav__item">
                         <a th:href="@{/}" class="nav__link">Home</a>
                     </li>
