--- a/src/main/resources/templates/Complementos/headerAdmin.html
+++ b/src/main/resources/templates/Complementos/headerAdmin.html
@@ -2,7 +2,7 @@
     <nav class="nav container">
         <img src="assets/img/LogoS.png" alt="" style="width: 80px;">
         <div class="nav__menu" id="nav-menu">
-            <ul class="nav__list">
+            <ul class="nav-list">
                 <li class="nav__item">
                     <a th:href="@{/inicio}" class="nav__link">Home</a>
                 </li>
