--- a/src/main/resources/templates/inicioAdmin.html
+++ b/src/main/resources/templates/inicioAdmin.html
@@ -4,21 +4,16 @@
 <head>
     <div th:replace="Complementos/head :: head"></div>
     <title>VidaSalud</title>
+    <link rel="stylesheet" href="assets/css/indexamd.css"/>
 </head>
 <body>
     <header>
         <div th:replace="Complementos/headerAdmin :: header"></div>
     </header>
-    <div class="Noticias">
-        <p class="Noticias_p">ÚLTIMAS NOTICIAS!!</p>
-        <img class="Noticias_img" src="assets/img/imag.png" alt="">
-        <p class="Noticias_pp">Actualmente, la Clínica VidaSalud cuenta con una torre de laparoscopia con fluorescencia (ICG)
-            con imagen 4K para realizar procedimientos quirúrgicos más precisos y seguros, además de intervenciones de revascularización,
-            operaciones convencionales y diagnósticos por imágenes, reduciendo los tiempos  en sala y disminuyendo el riesgo de complicaciones.
-            El Dr. Rafael Garatea, cirujano general y oncológico de nuestra institución,  explica que con esta nueva tecnología se observa en tiempo
-            real  y con ultra definición las estructuras anatómicas que le interesan intervenir al cirujano. A continuación, nuestro especialista nos
-            brinda mayor información</p>
-    </div>
+    <section class="hero">
+        <img src="assets/img/fondo_mant.png" alt="">
+        <h1>SISTEMA DE MANTENIMIENTO VIDA SALUD</h1>
+    </section>
     <footer>
         <div th:replace="Complementos/footer :: footer"></div>
     </footer>
